--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-TF_VAR_project_id      = "guille-default"
-TF_VAR_region          = "us-central1"
-TF_VAR_gke_username    = "gke"
-TF_VAR_gke_password    = "asjfaldksd5fwer2klw"
-TF_VAR_nodes_per_pool  = 1
+PROJECT_ID=guille-default
+GCP_REGION=us-central1
+GKE_USERNAME=gke
+GKE_PASSWORD=asjfaldksd5fwer2klw
+GKE_NODES_PER_POOL=1
