--- a/k8s/kubeflow/guille-default/kfctl_k8s_istio.v1.0.2.yaml
+++ b/k8s/kubeflow/guille-default/kfctl_k8s_istio.v1.0.2.yaml
@@ -5,7 +5,6 @@ metadata:
     kfctl.kubeflow.io/force-delete: "false"
   clusterName: gke_guille-default_us-central1_guille-default-gke
   creationTimestamp: null
-  name: kubeflow
   namespace: guille-excercise
 spec:
   applications:
@@ -359,7 +358,4 @@ spec:
   - name: manifests
     uri: https://github.com/kubeflow/manifests/archive/v1.0.2.tar.gz
   version: v1.0.2
-status:
-  reposCache:
-  - localPath: '"/Volumes/Code/opt/dev/kubeflow-gke/kubeflow_deployment/.cache/manifests/manifests-1.0.2"'
-    name: manifests
+status: {}
